--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <li>Teaching assistant at the University of Queensland's Queensland Mathematics Summer School. (2019)</li>
               <li>Mentored two undergraduate students on SPDEs for the University of Ottawa's Math Mentorship Program. (2025)<br></li>
               <li>Guest speaker at the Finger Lakes Probability Seminar, Syracuse University. (2026) </li>
-              <li>Mitacs Globalink Research Project participant, hosted by <a class="underline-link" href="https://sites.bu.edu/gzheng90/">Prof. Guangqu Zheng</a> at Boston University. (2026)</li>
+              <li>Mitacs Globalink Research Project participant at Boston University (working with <a class="underline-link" href="https://sites.bu.edu/gzheng90/">Prof. Guangqu Zheng</a>). (2026)</li>
             </ul>
           </article>
 
@@ -114,7 +114,8 @@
             <h3>Education</h3>
             <ul class="bullets">
               <li><strong>Doctor of Philosophy in Mathematics and Statistics</strong>,<br>University of Ottawa. (2024 - Present)</li>
-              <li><strong>Master of Science in pure mathematics</strong>,<br>University of Queensland. (2022-2023)</li>
+              <li><strong>Master of Science in pure mathematics</strong>,<br>University of Queensland. (2022-2023)<br>Thesis: A linear algebra approach to Hamilton
+              decompositions of infinite circulant graphs.</li>
               <li><strong>Bachelor of Mathematics in pure mathematics</strong>,<br>Minor in computer science, University of Queensland.<br>(2018-2021)</li>
             </ul>
           </article>
@@ -122,8 +123,8 @@
           <article class="card">
             <h3>Scholarships and Awards</h3>
             <ul class="bullets">
-              <li>Doctoral admission scholarship. </li>
-              <li>International doctoral scholarship.</li>
+              <li>Doctoral admission scholarship at Univ of Ottawa. </li>
+              <li>International doctoral scholarship at Univ of Ottawa.</li>
               <li>Mitacs Globalink research award.</li>
             </ul>
           </article>
