--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <li>Teaching assistant at the University of Queensland's Queensland Mathematics Summer School. (2019)</li>
               <li>Mentored two undergraduate students on SPDEs for the University of Ottawa's Math Mentorship Program. (2025)<br></li>
               <li>Guest speaker at the Finger Lakes Probability Seminar, Syracuse University. (2026) </li>
-              <li>Mitacs Globalink Research Project participant at Boston University (working with <a class="underline-link" href="https://sites.bu.edu/gzheng90/">Prof. Guangqu Zheng</a>). (2026)</li>
+              <li><a class="underline-link" href="https://www.mitacs.ca/our-programs/globalink-research-award/">Mitacs Globalink Research</a> participant at Boston University (working with <a class="underline-link" href="https://sites.bu.edu/gzheng90/">Prof. Guangqu Zheng</a>). (2026)</li>
             </ul>
           </article>
 
