--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
               <li>Teaching assistant at the University of Queensland's Queensland Mathematics Summer School. (2019)</li>
               <li>Mentored two undergraduate students on SPDEs for the University of Ottawa's Math Mentorship Program. (2025)<br></li>
               <li>Guest speaker at the Finger Lakes Probability Seminar, Syracuse University. (2026) </li>
-              <li><a class="underline-link" href="https://www.mitacs.ca/our-programs/globalink-research-award/">Mitacs Globalink Research</a> participant at Boston University (working with <a class="underline-link" href="https://sites.bu.edu/gzheng90/">Prof. Guangqu Zheng</a>). (2026)</li>
             </ul>
           </article>
 
@@ -123,9 +122,9 @@
           <article class="card">
             <h3>Scholarships and Awards</h3>
             <ul class="bullets">
-              <li>Doctoral admission scholarship at Univ of Ottawa. </li>
-              <li>International doctoral scholarship at Univ of Ottawa.</li>
-              <li>Mitacs Globalink research award.</li>
+              <li>Doctoral admission scholarship at University of Ottawa. (2024-2028)</li>
+              <li>International doctoral scholarship at University of Ottawa. (2024-2028)</li>
+              <li><a class="underline-link" href="https://www.mitacs.ca/our-programs/globalink-research-award/">Mitacs Globalink Research Award</a> at Boston University, working with <a class="underline-link" href="https://sites.bu.edu/gzheng90/">Prof. Guangqu Zheng</a>.<br>(January-April 2026)</li>
             </ul>
           </article>
         </div>
