--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
               <p class="pub-authors">with <a class="underline-link" href="https://uniweb.uottawa.ca/sites/Raluca-Balan">Raluca Balan</a> (2026)</p>
             </div>
             <div class="pub-actions">
-              <!--<a class="link" href="#" target="_blank" rel="noopener">arXiv</a>-->
-              <p class="pub-venue"><span class="tag">In preparation</span></p>
+              <a class="link" href="https://arxiv.org/abs/2602.23137" target="_blank" rel="noopener">arXiv</a>
+              <p class="pub-venue"><span class="tag">Preprint</span></p>
             </div>
           </li>
           <li class="pub" data-type="Preprint" data-year="2026">
