--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
             <ul class="bullets">
               <li>Doctoral admission scholarship at University of Ottawa. (2024-2028)</li>
               <li>International doctoral scholarship at University of Ottawa. (2024-2028)</li>
-              <li><a class="underline-link" href="https://www.mitacs.ca/our-programs/globalink-research-award/">Mitacs Globalink Research Award</a> at Boston University, working with <a class="underline-link" href="https://sites.bu.edu/gzheng90/">Prof. Guangqu Zheng</a>.<br>(January-April 2026)</li>
+              <li><a class="underline-link" href="https://www.mitacs.ca/our-programs/globalink-research-award/">Mitacs Globalink Research Award</a> at Boston University, working with <a class="underline-link" href="https://sites.bu.edu/gzheng90/">Prof. Guangqu Zheng</a>.<br>(19 January - 10 April 2026)</li>
+              <li><a class="underline-link" href="https://www.crmath.ca/en/research-support/international-research-stays/crm-cnrs-laboratory/">CRM-CNRS</a> award for participating in the <a class="underline-link" href="https://lmbp.uca.fr/stflour/">54th Probability Summer School</a>, Saint Flour. (29 June - 11 July 2026) </li>
             </ul>
           </article>
         </div>
